# congress-press

./: .gitignore  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: collect-text.yml  collect.yml  deploy-site.yml
data/2001/: 2001-01.jsonl  2001-02.jsonl  2001-03.jsonl  2001-04.jsonl  2001-05.jsonl  2001-06.jsonl  2001-07.jsonl  2001-08.jsonl  2001-09.jsonl  2001-10.jsonl  2001-11.jsonl  2001-12.jsonl
data/2002/: 2002-01.jsonl  2002-02.jsonl  2002-03.jsonl  2002-04.jsonl  2002-05.jsonl  2002-06.jsonl  2002-07.jsonl  2002-08.jsonl  2002-12.jsonl
data/2003/: 2003-01.jsonl  2003-02.jsonl  2003-03.jsonl  2003-04.jsonl  2003-05.jsonl  2003-06.jsonl  2003-07.jsonl  2003-08.jsonl  2003-09.jsonl  2003-10.jsonl  2003-11.jsonl  2003-12.jsonl
data/2004/: 2004-01.jsonl  2004-02.jsonl  2004-03.jsonl  2004-04.jsonl  2004-05.jsonl  2004-06.jsonl  2004-07.jsonl  2004-08.jsonl  2004-09.jsonl  2004-10.jsonl  2004-11.jsonl  2004-12.jsonl
data/2005/: 2005-01.jsonl  2005-02.jsonl  2005-03.jsonl  2005-04.jsonl  2005-05.jsonl  2005-06.jsonl  2005-07.jsonl  2005-09.jsonl  2005-10.jsonl  2005-11.jsonl  2005-12.jsonl
data/2006/: 2006-01.jsonl  2006-02.jsonl  2006-03.jsonl  2006-04.jsonl  2006-05.jsonl  2006-06.jsonl  2006-07.jsonl  2006-08.jsonl  2006-09.jsonl  2006-10.jsonl  2006-11.jsonl  2006-12.jsonl
data/2007/: 2007-01.jsonl  2007-02.jsonl  (+10 more)
docs/: dashboard.html  index.html
scripts/: backfill.py  backfill_members.py  build_dashboard.py  build_site.py  collect_metadata.py  collect_text.py  import_legacy.py  remove_member.py  utils.py  wayback_text.py
(+126 files in other folders)
